# cohere-transcribe-rs

./: .gitignore  Cargo.toml  README.md
examples/: check_pool.rs
ptx/: kernels_sm61.ptx  kernels_sm70.ptx  kernels_sm75.ptx  kernels_sm80.ptx  kernels_sm86.ptx  kernels_sm89.ptx  kernels_sm90.ptx
scripts/: compile-ptx.ps1
src/: audio.rs  cli.rs  decoder.rs  encoder.rs  engine.rs  features.rs  kernels.cu  kernels.rs  lib.rs  main.rs  pre_encoder.rs  prepare.rs  raw_tensor.rs  tensor.rs  tokenizer.rs  transcribe.rs  weights.rs  weights_gpu.rs
src/backend/: cpu.rs  cpu_f16.rs  cuda.rs  mod.rs
tests/: cpu_backend_smoke.rs  decode_op_prof.rs  decode_prof.rs  decoder_layer.rs  decoder_prefill_parity.rs  encoder_layer.rs  encoder_rel_pos_shift.rs  engine_gemm.rs  pre_encoder_bridge.rs  rel_shift.rs  weights_load.rs
